[workspace]
members = [
    "./",
    "parser",
    "keyberon",
    "example_tcp_client",
    "tcp_protocol",
    "simulated_input",
    "windows_key_tester",
]
exclude = [
    "wasm",
]

[package]
name = "kanata"
version = "1.6.0-prerelease-4"
authors = ["jtroo <j.andreitabs@gmail.com>"]
description = "Multi-layer keyboard customization"
keywords = ["cli", "linux", "windows", "keyboard", "layout"]
categories = ["command-line-utilities"]
homepage = "https://github.com/jtroo/kanata"
repository = "https://github.com/jtroo/kanata"
readme = "README.md"
license = "LGPL-3.0-only"
edition = "2021"
default-run = "kanata"

[lib]
name = "kanata_state_machine"
path = "src/lib.rs"

[[bin]]
name = "kanata"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "std", "derive", "help", "suggestions" ], default_features = false }
dirs = "5.0.1"
indoc = { version = "2.0.4", optional = true }
instant = { version = "0.1.12", default_features = false }
log = { version = "0.4.8", default_features = false }
miette = { version = "5.7.0", features = ["fancy"] }
once_cell = "1"
parking_lot = "0.12"
radix_trie = "0.2"
rustc-hash = "1.1.0"
simplelog = "0.12.0"
serde_json = { version = "1", features = ["std"], default_features = false, optional = true }

# kanata-keyberon = "0.160.4"
# kanata-parser = "0.160.4"
# kanata-tcp-protocol = "0.160.4"
# Uncomment below and comment out above for testing local changes.
# Otherwise any changes to the local files will not reflect in the compiled
# binary.
kanata-keyberon = { path = "keyberon" }
kanata-parser =   { path = "parser" }
kanata-tcp-protocol = { path = "tcp_protocol" }

[target.'cfg(target_os = "macos")'.dependencies]
karabiner-driverkit = "0.1.3"

[target.'cfg(target_os = "linux")'.dependencies]
signal-hook = "0.3.14"
inotify = { version = "0.10.0", default_features = false }
mio = { version = "0.8.11", features = ["os-poll", "os-ext"] }
nix = { version = "0.26.1", features = ["ioctl"] }
sd-notify = "0.4.1"

evdev = "=0.12.0" # Pinned to avoid a bug in 0.12.1

[target.'cfg(target_os = "windows")'.dependencies]
encode_unicode = "0.3.6"
winapi = { version = "0.3.9", features = [
    "wincon",
    "timeapi",
    "mmsystem",
] }
native-windows-gui = { version = "1.0.12", default_features = false }
kanata-interception = { version = "0.2.0", optional = true }

[features]
default = ["tcp_server"]
perf_logging = []
tcp_server = ["serde_json"]
win_sendinput_send_scancodes = []
win_llhook_read_scancodes = []
cmd = ["kanata-parser/cmd"]
interception_driver = ["kanata-interception", "kanata-parser/interception_driver"]
simulated_output = ["indoc"]
wasm = [ "instant/wasm-bindgen" ]

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
codegen-units = 1
