[package]
name = "kanata_example_tcp_client"
description = "Example kanata TCP client"
version = "1.0.0"
edition = "2021"
license = "LGPL-3.0"
authors = ["jtroo <j.andreitabs@gmail.com>"]

[dependencies]
anyhow = "1"
clap = { version = "3", features = [ "derive" ] }
log = "0.4.8"
simplelog = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
