[package]
name = "kanata-keyberon"
version = "0.190.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>", "Robin Krahl <robin.krahl@ireas.org>", "jtroo <j.andreitabs@gmail.com>"]
edition = "2021"
description = "Pure Rust keyboard firmware. Fork intended for use with kanata."
documentation = "https://docs.rs/keyberon"
repository = "https://github.com/TeXitoi/keyberon"
keywords = ["keyboard", "kanata"]
categories = ["no-std"]
license = "MIT"
readme = "README.md"

[dependencies]
kanata-keyberon-macros = { version = "0.2.0" }
heapless = "0.7.16"
rustc-hash = "1.1.0"
arraydeque = { version = "0.5.1", default-features = false }
