[package]
name = "kanata-parser"
version = "0.1.0"
authors = ["jtroo <j.andreitabs@gmail.com>"]
description = "A parser for configuration language of kanata, a keyboard remapper."
keywords = ["kanata", "parser"]
homepage = "https://github.com/jtroo/kanata"
repository = "https://github.com/jtroo/kanata"
readme = "README.md"
license = "LGPL-3.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = [ "std", "derive", "help", "suggestions" ], default_features = false }
log = { version = "0.4.8", default_features = false }
simplelog = "0.12.0"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
serde = { version = "1", features = ["alloc", "derive"], default_features = false }
serde_json = { version = "1", features = ["alloc"], default_features = false }
radix_trie = "0.2"
rustc-hash = "1.1.0"
miette = { version = "5.7.0", features = ["fancy"] }
thiserror = "1.0.38"
kanata-keyberon = { path = "keyberon" }
