[package]
name = "kanata-parser"
version = "0.190.0"
authors = ["jtroo <j.andreitabs@gmail.com>"]
description = "A parser for configuration language of kanata, a keyboard remapper."
keywords = ["kanata", "parser"]
homepage = "https://github.com/jtroo/kanata"
repository = "https://github.com/jtroo/kanata"
readme = "README.md"
license = "LGPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1"
bitflags = "2.5.0"
bytemuck = "1.15.0"
itertools = "0.12"
log = { version = "0.4.8", default-features = false }
miette = { version = "5.7.0", features = ["fancy"] }
once_cell = "1"
parking_lot = "0.12"
patricia_tree = "0.8"
rustc-hash = "1.1.0"
thiserror = "1.0.38"

kanata-keyberon = { path = "../keyberon", version = "0.190.0" }

[dev-dependencies]
simplelog = "0.12.0"

[features]
cmd = []
interception_driver = []
gui = []
lsp = []
win_llhook_read_scancodes = []
win_sendinput_send_scancodes = []
zippychord = []
