[package]
name   	= "sim_evt"
version	= "0.0.1"
edition	= "2021"

[lib]
name      	= "kanata_sim_evt"
path      	= "src/lib_sim.rs"
crate-type	= ['lib','cdylib']

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "std", "derive", "help", "suggestions" ], default_features = false }
dirs = "5.0.1"
indoc = { version = "2.0.4", optional = true }
log = { version = "0.4.8", default_features = false }
miette = { version = "5.7.0", features = ["fancy"] }
once_cell = "1"
parking_lot = "0.12"
radix_trie = "0.2"
rustc-hash = "1.1.0"
simplelog = "0.12.0"
regex = "1.10.3"

kanata = {path="..", features=["simulated_output"], default_features=false}

# kanata-keyberon = "0.160.1"
# kanata-parser = "0.160.1"
# kanata-tcp-protocol = "0.160.1"
# Uncomment below and comment out above for testing local changes.
# Otherwise any changes to the local files will not reflect in the compiled
# binary.
kanata-keyberon = { path = "../keyberon" }
kanata-parser =   { path = "../parser" }
kanata-tcp-protocol = { path = "../tcp_protocol" }
lazy_static = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
signal-hook = "0.3.14"
inotify = { version = "0.10.0", default_features = false }
mio = { version = "0.8.11", features = ["os-poll", "os-ext"] }
nix = { version = "0.26.1", features = ["ioctl"] }
sd-notify = "0.4.1"

evdev = "=0.12.0" # Pinned to avoid a bug in 0.12.1

[target.'cfg(target_os = "windows")'.dependencies]
encode_unicode = "0.3.6"
winapi = { version = "0.3.9", features = [
    "wincon",
    "timeapi",
    "mmsystem",
] }
native-windows-gui = { version = "1.0.12", default_features = false }
kanata-interception = { version = "0.2.0", optional = true }
win_dbg_logger = "0.1.0"
