[package]
name = "kanata-sim"
version = "0.1.0"
authors = ["jtroo <j.andreitabs@gmail.com>"]
description = "Simulated input using kanata"
keywords = ["kanata", "input", "simulated"]
homepage = "https://github.com/jtroo/kanata"
repository = "https://github.com/jtroo/kanata"
readme = "README.md"
license = "LGPL-3.0"
edition = "2021"

[[bin]]
name = "kanata_simulated_input"
path = "src/sim.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "std", "derive", "help", "suggestions" ], default-features = false }
dirs = "5.0.1"
log = { version = "0.4.8", default-features = false }
simplelog = "0.12.0"
time = "0.3.36"

kanata = { path = ".." , default-features = false }

[features]
default = ["simulated_output", "tcp_server", "watch"]
simulated_output = ["kanata/simulated_output"]
simulated_input = ["kanata/simulated_input"]
passthru_ahk = ["simulated_input","simulated_output"]
tcp_server = ["kanata/tcp_server"]
watch = ["kanata/watch"]
