[package]
name   	= "simulated_passthru"
version	= "0.0.1"
edition	= "2021"

[lib]
name      	= "kanata_passthru"
path      	= "src/lib_passthru.rs"
crate-type	= ['lib','cdylib']

[dependencies]
anyhow = "1"
log = { version = "0.4.8", default-features = false }
parking_lot = "0.12"
regex = "1.10.3"

kanata = {path=".." , default-features=false}

lazy_static = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
encode_unicode = "0.3.6"
winapi = { version = "0.3.9", features = [
    "wincon",
    "timeapi",
    "mmsystem",
] }
native-windows-gui = { version = "1.0.12", default-features = false }
kanata-interception = { version = "0.3.0", optional = true }
win_dbg_logger = "0.1.0"
widestring = "1.1.0"

[features]
default         	= ["simulated_output","tcp_server","watch"]
tcp_server      	= ["kanata/tcp_server"]
simulated_output	= ["kanata/simulated_output"]
simulated_input 	= ["kanata/simulated_input"]
passthru_ahk    	= ["simulated_input","simulated_output","kanata/passthru_ahk"]
perf_logging    	= []
watch           	= ["kanata/watch"]
