[package]
name = "kanata-tcp-protocol"
version = "0.161.0"
edition = "2021"
description = "TCP protocol for kanata. This does not follow semver."
license = "LGPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["alloc", "derive"], default_features = false }
serde_derive = "1.0"
serde_json = { version = "1", features = ["alloc"], default_features = false }
