[workspace]
members = ["."]

[package]
name = "kanata-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
wasm-bindgen = "0.2.100"
kanata = { path = ".." , default-features = false, features = [ "simulated_output", "zippychord" ] }
anyhow = "1.0.81"
log = "0.4.21"
console_error_panic_hook = "0.1.7"
rustc-hash = "1.1.0"
