[package]
name = "win_dbg_logger"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sivadeilra/win_dbg_logger"
description = "A logger for use with Windows debuggers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log      	= "0.4.*"
winapi   	= {version="0.3.9", features=["processthreadsapi",]}
regex    	= {version="1.10.4"}
simplelog	= {version="0.12.0", optional=true}

[features]
simple_shared	= ["simplelog"]
