[package]
name = "windows_key_tester"
version = "0.1.0"
authors = ["jtroo <j.andreitabs@gmail.com>"]
description = "Windows keycode tester"
keywords = []
categories = ["command-line-utilities"]
homepage = "https://github.com/jtroo/kanata"
repository = "https://github.com/jtroo/kanata"
readme = "README.md"
license = "LGPL-3.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = [ "derive" ] }
log = "0.4.8"
simplelog = "0.12.0"
anyhow = "1"
winapi = { version = "0.3.9", features = [
    "wincon",
    "timeapi",
    "mmsystem",
] }
native-windows-gui = "1.0.12"
interception = { version = "0.1.2", optional = true }

[features]
cmd = []
interception_driver = [ "interception" ]

[profile.release]
opt-level = "z"
lto = "fat"
