[package]
name = "windows_key_tester"
version = "0.3.0"
authors = ["jtroo <j.andreitabs@gmail.com>"]
description = "Windows keycode tester"
keywords = []
categories = ["command-line-utilities"]
homepage = "https://github.com/jtroo/kanata"
repository = "https://github.com/jtroo/kanata"
readme = "README.md"
license = "LGPL-3.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
clap = { version = "4", features = [ "std", "derive", "help", "suggestions" ], default_features = false }
log = "0.4.8"
simplelog = "0.12.0"
anyhow = "1"
winapi = { version = "0.3.9", features = [
    "wincon",
    "timeapi",
    "mmsystem",
] }
native-windows-gui = { version = "1.0.12", default_features = false }
kanata-interception = { version = "0.2.0", optional = true }
kanata = { path = "..", optional = true }

[features]
interception_driver = [ "kanata-interception" ]
winiov2 = [ "kanata" ]
